--- a/blog.html
+++ b/blog.html
@@ -41,7 +41,7 @@
   </nav>
 
   <div class="container-fluid fh5co-home-banner">
-    <div class="card"> <video class="card-img" src="./assets/videos/VideosFFT.mp4" alt="" autoplay loop> </video>
+    <div class="card"> <video class="card-img" src="./assets/videos/bgVideo.mp4" type="video/mp4" alt="" autoplay muted loop> </video>
       <div class="card-img-overlay">
         <div class="center-text">
           <h2 class="card-title">Open House 2024 - Bienvenidos Clientes</h2>
