--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 
     <!-- Estilos CSS index -->
     <link rel="stylesheet" href="index.css">
+  <link href="./assets2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="navbarconfig.css">
 
   <title>FFT México OpenHouse 2024</title>
 </head>
