Correcciones en las dimensiones del formulario de registro

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
           <input type="text" class="form-control" placeholder="Nombre completo del primer acompañante">
           <input type="text" class="form-control" placeholder="Nombre completo del segundo acompañante">
           <input type="text" class="form-control" placeholder="Requerimientos especiales: Discpacidad, etc.">
-          <!-- <textarea class="form-control" placeholder="Compañía"></textarea> -->
+          <textarea class="form-control" placeholder="Compañía"></textarea>
           <button type="submit">Enviar
           </button>
         </div>
