Nuevo link de formulario

--- a/gracias.html
+++ b/gracias.html
@@ -212,7 +212,7 @@
           <textarea class="form-control" placeholder="Compañía"></textarea> -->
           
           
-          <form class="needs-validation" action="https://formspree.io/f/xpwaeazw"
+          <form class="needs-validation" action="https://formspree.io/f/mwkgzebo"
           method="POST" novalidate>
 
             <div class="row g-3">
